--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
 <body>
     <nav>
         <h1 id="title">Dashboard</h1>
+        <ul>
+            <li>Home</li>
+            <li>Profile</li>
+            <li>Messages</li>
+            <li>History</li>
+            <li>Tasks</li>
+            <li>Communities</li>
+        </ul>
     </nav>
     <header>Hi there</header>
     <main>
