--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 
 <body>
     <nav>
-        <div id="title">
+        <a href="" id="title">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
                 <path d="M13,3V9H21V3M13,21H21V11H13M3,21H11V15H3M3,13H11V3H3V13Z" />
             </svg>
             Dashboard
-        </div>
+        </a>
         <ul>
             <li>Home</li>
             <li>Profile</li>
