--- a/index.html
+++ b/index.html
@@ -17,12 +17,27 @@
             Dashboard
         </a>
         <ul>
-            <li>Home</li>
-            <li>Profile</li>
-            <li>Messages</li>
-            <li>History</li>
-            <li>Tasks</li>
-            <li>Communities</li>
+            <li><a href="">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                        <path d="M10,20V14H14V20H19V12H22L12,3L2,12H5V20H10Z" />
+                    </svg>
+                    Home
+                </a></li>
+            <li><a href="">
+                    Profile
+                </a></li>
+            <li><a href="">
+                    Messages
+                </a></li>
+            <li><a href="">
+                    History
+                </a></li>
+            <li><a href="">
+                    Tasks
+                </a></li>
+            <li><a href="">
+                    Communities
+                </a></li>
         </ul>
     </nav>
     <header>Hi there</header>
