--- a/index.html
+++ b/index.html
@@ -75,13 +75,15 @@
     </nav>
     <header>Hi there</header>
     <main>
-        <section>
-            <h4>Your Projects</h4>
+        <section id="projects">
+            <h3>Your Projects</h3>
         </section>
-        <aside>
-            <section>Announcements</section>
-            <section>Trending</section>
-        </aside>
+        <section id="announcements">
+            <h3>Announcements</h3>
+        </section>
+        <section id="trending">
+            <h3>Trending</h3>
+        </section>
     </main>
 </body>
 
