--- a/index.html
+++ b/index.html
@@ -77,6 +77,20 @@
     <main>
         <section id="projects">
             <h3>Your Projects</h3>
+            <div id="project-container">
+                <div class="card">
+                    <h4>Project</h4>
+                    <p>Description</p>
+                </div>
+                <div class="card">
+                    <h4>Project</h4>
+                    <p>Description</p>
+                </div>
+                <div class="card">
+                    <h4>Project</h4>
+                    <p>Description</p>
+                </div>
+            </div>
         </section>
         <section id="announcements">
             <h3>Announcements</h3>
