--- a/index.html
+++ b/index.html
@@ -94,9 +94,11 @@
         </section>
         <section id="announcements">
             <h3>Announcements</h3>
+            <div class="card"></div>
         </section>
         <section id="trending">
             <h3>Trending</h3>
+            <div class="card"></div>
         </section>
     </main>
 </body>
