make projects a list

--- a/index.html
+++ b/index.html
@@ -77,20 +77,20 @@
     <main>
         <section id="projects">
             <h3>Your Projects</h3>
-            <div id="project-container">
-                <div class="card">
+            <ul id="project-container">
+                <li class="card">
                     <h4>Project</h4>
                     <p>Description</p>
-                </div>
-                <div class="card">
+                </li>
+                <li class="card">
                     <h4>Project</h4>
                     <p>Description</p>
-                </div>
-                <div class="card">
+                </li>
+                <li class="card">
                     <h4>Project</h4>
                     <p>Description</p>
-                </div>
-            </div>
+                </li>
+            </ul>
         </section>
         <section id="announcements">
             <h3>Announcements</h3>
