--- a/index.html
+++ b/index.html
@@ -85,7 +85,18 @@
                 </a></li>
         </ul>
     </nav>
-    <header>Hi there</header>
+    <header>
+        <div id="search">
+            Search
+        </div>
+        <div id="personal">
+            Rachel Shen
+        </div>
+        <div id="greeting">Hi there</div>
+        <div id="interact">
+            New
+        </div>
+    </header>
     <main>
         <section id="projects">
             <h3>Your Projects</h3>
