--- a/index.html
+++ b/index.html
@@ -103,7 +103,9 @@
         </div>
         <div id="greeting">Hi there</div>
         <div id="interact">
-            New
+            <button>New</button>
+            <button>Upload</button>
+            <button>Share</button>
         </div>
     </header>
     <main>
