add project interaction icons

--- a/index.html
+++ b/index.html
@@ -121,15 +121,30 @@
             <ul id="project-container">
                 <li class="card">
                     <h4>Project</h4>
-                    <p>Description</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+                    <div class="project-interact">
+                        <img src="images/star-outline.svg" alt="Add to starred" />
+                        <img src="images/eye-outline.svg" alt="Add to watchlist" />
+                        <img src="images/source-branch.svg" alt="Fork project" />
+                    </div>
                 </li>
                 <li class="card">
                     <h4>Project</h4>
                     <p>Description</p>
+                    <div class="project-interact">
+                        <img src="images/star-outline.svg" alt="Add to starred" />
+                        <img src="images/eye-outline.svg" alt="Add to watchlist" />
+                        <img src="images/source-branch.svg" alt="Fork project" />
+                    </div>
                 </li>
                 <li class="card">
                     <h4>Project</h4>
                     <p>Description</p>
+                    <div class="project-interact">
+                        <img src="images/star-outline.svg" alt="Add to starred" />
+                        <img src="images/eye-outline.svg" alt="Add to watchlist" />
+                        <img src="images/source-branch.svg" alt="Fork project" />
+                    </div>
                 </li>
             </ul>
         </section>
