--- a/index.html
+++ b/index.html
@@ -146,6 +146,42 @@
                         <img src="images/source-branch.svg" alt="Fork project" />
                     </div>
                 </li>
+                <li class="card">
+                    <h4>Project</h4>
+                    <p>Description</p>
+                    <div class="project-interact">
+                        <img src="images/star-outline.svg" alt="Add to starred" />
+                        <img src="images/eye-outline.svg" alt="Add to watchlist" />
+                        <img src="images/source-branch.svg" alt="Fork project" />
+                    </div>
+                </li>
+                <li class="card">
+                    <h4>Project</h4>
+                    <p>Description</p>
+                    <div class="project-interact">
+                        <img src="images/star-outline.svg" alt="Add to starred" />
+                        <img src="images/eye-outline.svg" alt="Add to watchlist" />
+                        <img src="images/source-branch.svg" alt="Fork project" />
+                    </div>
+                </li>
+                <li class="card">
+                    <h4>Project</h4>
+                    <p>Description</p>
+                    <div class="project-interact">
+                        <img src="images/star-outline.svg" alt="Add to starred" />
+                        <img src="images/eye-outline.svg" alt="Add to watchlist" />
+                        <img src="images/source-branch.svg" alt="Fork project" />
+                    </div>
+                </li>
+                <li class="card">
+                    <h4>Project</h4>
+                    <p>Description</p>
+                    <div class="project-interact">
+                        <img src="images/star-outline.svg" alt="Add to starred" />
+                        <img src="images/eye-outline.svg" alt="Add to watchlist" />
+                        <img src="images/source-branch.svg" alt="Fork project" />
+                    </div>
+                </li>
             </ul>
         </section>
         <section id="announcements">
