make sidebar properly sticky

--- a/index.html
+++ b/index.html
@@ -201,6 +201,11 @@
                     <h5>Updated Privacy Policy</h5>
                     <p>Vitae elementum curabitur vitae nunc sed velit dignissim. Tincidunt id aliquet risus feugiat in ante metus dictum at. Elementum pulvinar etiam non quam lacus suspendisse faucibus. Ac tortor dignissim convallis aenean et tortor at risus. Nibh tellus molestie nunc non blandit massa enim.</p>
                 </div>
+                <hr/>
+                <div class="announcement">
+                    <h5>Updated Privacy Policy</h5>
+                    <p>Vitae elementum curabitur vitae nunc sed velit dignissim. Tincidunt id aliquet risus feugiat in ante metus dictum at. Elementum pulvinar etiam non quam lacus suspendisse faucibus. Ac tortor dignissim convallis aenean et tortor at risus. Nibh tellus molestie nunc non blandit massa enim.</p>
+                </div>
             </div>
         </section>
         <section id="trending">
