use flex instead of grid

--- a/index.html
+++ b/index.html
@@ -184,34 +184,36 @@
                 </li>
             </ul>
         </section>
-        <section id="announcements">
-            <h3>Announcements</h3>
-            <div class="card">
-                <div class="announcement">
-                    <h5>Site Maintenance</h5>
-                    <p>The dashboard will be down for regular maintenance from 10PM - 6AM EST on 12/15</p>
+        <aside>
+            <section id="announcements">
+                <h3>Announcements</h3>
+                <div class="card">
+                    <div class="announcement">
+                        <h5>Site Maintenance</h5>
+                        <p>The dashboard will be down for regular maintenance from 10PM - 6AM EST on 12/15</p>
+                    </div>
+                    <hr/>
+                    <div class="announcement">
+                        <h5>Community Share Day</h5>
+                        <p>Vitae elementum curabitur vitae nunc sed velit dignissim. Tincidunt id aliquet risus feugiat in ante metus dictum at. Elementum pulvinar etiam non quam lacus suspendisse faucibus. Ac tortor dignissim convallis aenean et tortor at risus. Nibh tellus molestie nunc non blandit massa enim.</p>
+                    </div>
+                    <hr/>
+                    <div class="announcement">
+                        <h5>Updated Privacy Policy</h5>
+                        <p>Vitae elementum curabitur vitae nunc sed velit dignissim. Tincidunt id aliquet risus feugiat in ante metus dictum at. Elementum pulvinar etiam non quam lacus suspendisse faucibus. Ac tortor dignissim convallis aenean et tortor at risus. Nibh tellus molestie nunc non blandit massa enim.</p>
+                    </div>
+                    <hr/>
+                    <div class="announcement">
+                        <h5>Updated Privacy Policy</h5>
+                        <p>Vitae elementum curabitur vitae nunc sed velit dignissim. Tincidunt id aliquet risus feugiat in ante metus dictum at. Elementum pulvinar etiam non quam lacus suspendisse faucibus. Ac tortor dignissim convallis aenean et tortor at risus. Nibh tellus molestie nunc non blandit massa enim.</p>
+                    </div>
                 </div>
-                <hr/>
-                <div class="announcement">
-                    <h5>Community Share Day</h5>
-                    <p>Vitae elementum curabitur vitae nunc sed velit dignissim. Tincidunt id aliquet risus feugiat in ante metus dictum at. Elementum pulvinar etiam non quam lacus suspendisse faucibus. Ac tortor dignissim convallis aenean et tortor at risus. Nibh tellus molestie nunc non blandit massa enim.</p>
-                </div>
-                <hr/>
-                <div class="announcement">
-                    <h5>Updated Privacy Policy</h5>
-                    <p>Vitae elementum curabitur vitae nunc sed velit dignissim. Tincidunt id aliquet risus feugiat in ante metus dictum at. Elementum pulvinar etiam non quam lacus suspendisse faucibus. Ac tortor dignissim convallis aenean et tortor at risus. Nibh tellus molestie nunc non blandit massa enim.</p>
-                </div>
-                <hr/>
-                <div class="announcement">
-                    <h5>Updated Privacy Policy</h5>
-                    <p>Vitae elementum curabitur vitae nunc sed velit dignissim. Tincidunt id aliquet risus feugiat in ante metus dictum at. Elementum pulvinar etiam non quam lacus suspendisse faucibus. Ac tortor dignissim convallis aenean et tortor at risus. Nibh tellus molestie nunc non blandit massa enim.</p>
-                </div>
-            </div>
-        </section>
-        <section id="trending">
-            <h3>Trending</h3>
-            <div class="card"></div>
-        </section>
+            </section>
+            <section id="trending">
+                <h3>Trending</h3>
+                <div class="card"></div>
+            </section>
+        </aside>
     </main>
 </body>
 
