--- a/index.html
+++ b/index.html
@@ -211,7 +211,36 @@
             </section>
             <section id="trending">
                 <h3>Trending</h3>
-                <div class="card"></div>
+                <div class="card">
+                    <div class="user">
+                        <img src="images/profile_picture.svg" alt="profile picture" width="50" height="50" />
+                        <div class="description">
+                            <h5>@bob</h5>
+                            <p>World Peace Builder</p>
+                        </div>
+                    </div>
+                    <div class="user">
+                        <img src="images/profile_picture.svg" alt="profile picture" width="50" height="50" />
+                        <div class="description">
+                            <h5>@morgan</h5>
+                            <p>Super Cool Project</p>
+                        </div>
+                    </div>
+                    <div class="user">
+                        <img src="images/profile_picture.svg" alt="profile picture" width="50" height="50" />
+                        <div class="description">
+                            <h5>@kendall</h5>
+                            <p>Life Changing App</p>
+                        </div>
+                    </div>
+                    <div class="user">
+                        <img src="images/profile_picture.svg" alt="profile picture" width="50" height="50" />
+                        <div class="description">
+                            <h5>@alex</h5>
+                            <p>No Traffic Maker</p>
+                        </div>
+                    </div>
+                </div>
             </section>
         </aside>
     </main>
