--- a/index.html
+++ b/index.html
@@ -213,28 +213,28 @@
                 <h3>Trending</h3>
                 <div class="card">
                     <div class="user">
-                        <img src="images/profile_picture.svg" alt="profile picture" width="50" height="50" />
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M11,17L15,9V7H9V9H13L9,17H11M12,2A10,10 0 0,1 22,12A10,10 0 0,1 12,22A10,10 0 0,1 2,12A10,10 0 0,1 12,2Z" /></svg>
                         <div class="description">
                             <h5>@bob</h5>
                             <p>World Peace Builder</p>
                         </div>
                     </div>
                     <div class="user">
-                        <img src="images/profile_picture.svg" alt="profile picture" width="50" height="50" />
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M11,17L15,9V7H9V9H13L9,17H11M12,2A10,10 0 0,1 22,12A10,10 0 0,1 12,22A10,10 0 0,1 2,12A10,10 0 0,1 12,2Z" /></svg>
                         <div class="description">
                             <h5>@morgan</h5>
                             <p>Super Cool Project</p>
                         </div>
                     </div>
                     <div class="user">
-                        <img src="images/profile_picture.svg" alt="profile picture" width="50" height="50" />
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M11,17L15,9V7H9V9H13L9,17H11M12,2A10,10 0 0,1 22,12A10,10 0 0,1 12,22A10,10 0 0,1 2,12A10,10 0 0,1 12,2Z" /></svg>
                         <div class="description">
                             <h5>@kendall</h5>
                             <p>Life Changing App</p>
                         </div>
                     </div>
                     <div class="user">
-                        <img src="images/profile_picture.svg" alt="profile picture" width="50" height="50" />
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M11,17L15,9V7H9V9H13L9,17H11M12,2A10,10 0 0,1 22,12A10,10 0 0,1 12,22A10,10 0 0,1 2,12A10,10 0 0,1 12,2Z" /></svg>
                         <div class="description">
                             <h5>@alex</h5>
                             <p>No Traffic Maker</p>
