--- a/index.html
+++ b/index.html
@@ -121,7 +121,11 @@
             <ul id="project-container">
                 <li class="card">
                     <h4>Project</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                        laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
+                        voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
+                        non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
                     <div class="project-interact">
                         <img src="images/star-outline.svg" alt="Add to starred" />
                         <img src="images/eye-outline.svg" alt="Add to watchlist" />
@@ -192,20 +196,29 @@
                         <h5>Site Maintenance</h5>
                         <p>The dashboard will be down for regular maintenance from 10PM - 6AM EST on 12/15</p>
                     </div>
-                    <hr/>
+                    <hr />
                     <div class="announcement">
                         <h5>Community Share Day</h5>
-                        <p>Vitae elementum curabitur vitae nunc sed velit dignissim. Tincidunt id aliquet risus feugiat in ante metus dictum at. Elementum pulvinar etiam non quam lacus suspendisse faucibus. Ac tortor dignissim convallis aenean et tortor at risus. Nibh tellus molestie nunc non blandit massa enim.</p>
+                        <p>Vitae elementum curabitur vitae nunc sed velit dignissim. Tincidunt id aliquet risus feugiat
+                            in ante metus dictum at. Elementum pulvinar etiam non quam lacus suspendisse faucibus. Ac
+                            tortor dignissim convallis aenean et tortor at risus. Nibh tellus molestie nunc non blandit
+                            massa enim.</p>
                     </div>
-                    <hr/>
+                    <hr />
                     <div class="announcement">
                         <h5>Updated Privacy Policy</h5>
-                        <p>Vitae elementum curabitur vitae nunc sed velit dignissim. Tincidunt id aliquet risus feugiat in ante metus dictum at. Elementum pulvinar etiam non quam lacus suspendisse faucibus. Ac tortor dignissim convallis aenean et tortor at risus. Nibh tellus molestie nunc non blandit massa enim.</p>
+                        <p>Vitae elementum curabitur vitae nunc sed velit dignissim. Tincidunt id aliquet risus feugiat
+                            in ante metus dictum at. Elementum pulvinar etiam non quam lacus suspendisse faucibus. Ac
+                            tortor dignissim convallis aenean et tortor at risus. Nibh tellus molestie nunc non blandit
+                            massa enim.</p>
                     </div>
-                    <hr/>
+                    <hr />
                     <div class="announcement">
                         <h5>Updated Privacy Policy</h5>
-                        <p>Vitae elementum curabitur vitae nunc sed velit dignissim. Tincidunt id aliquet risus feugiat in ante metus dictum at. Elementum pulvinar etiam non quam lacus suspendisse faucibus. Ac tortor dignissim convallis aenean et tortor at risus. Nibh tellus molestie nunc non blandit massa enim.</p>
+                        <p>Vitae elementum curabitur vitae nunc sed velit dignissim. Tincidunt id aliquet risus feugiat
+                            in ante metus dictum at. Elementum pulvinar etiam non quam lacus suspendisse faucibus. Ac
+                            tortor dignissim convallis aenean et tortor at risus. Nibh tellus molestie nunc non blandit
+                            massa enim.</p>
                     </div>
                 </div>
             </section>
@@ -213,28 +226,40 @@
                 <h3>Trending</h3>
                 <div class="card">
                     <div class="user">
-                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M11,17L15,9V7H9V9H13L9,17H11M12,2A10,10 0 0,1 22,12A10,10 0 0,1 12,22A10,10 0 0,1 2,12A10,10 0 0,1 12,2Z" /></svg>
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                            <path
+                                d="M11,17L15,9V7H9V9H13L9,17H11M12,2A10,10 0 0,1 22,12A10,10 0 0,1 12,22A10,10 0 0,1 2,12A10,10 0 0,1 12,2Z" />
+                        </svg>
                         <div class="description">
                             <h5>@bob</h5>
                             <p>World Peace Builder</p>
                         </div>
                     </div>
                     <div class="user">
-                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M11,17L15,9V7H9V9H13L9,17H11M12,2A10,10 0 0,1 22,12A10,10 0 0,1 12,22A10,10 0 0,1 2,12A10,10 0 0,1 12,2Z" /></svg>
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                            <path
+                                d="M11,17L15,9V7H9V9H13L9,17H11M12,2A10,10 0 0,1 22,12A10,10 0 0,1 12,22A10,10 0 0,1 2,12A10,10 0 0,1 12,2Z" />
+                        </svg>
                         <div class="description">
                             <h5>@morgan</h5>
                             <p>Super Cool Project</p>
                         </div>
                     </div>
                     <div class="user">
-                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M11,17L15,9V7H9V9H13L9,17H11M12,2A10,10 0 0,1 22,12A10,10 0 0,1 12,22A10,10 0 0,1 2,12A10,10 0 0,1 12,2Z" /></svg>
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                            <path
+                                d="M11,17L15,9V7H9V9H13L9,17H11M12,2A10,10 0 0,1 22,12A10,10 0 0,1 12,22A10,10 0 0,1 2,12A10,10 0 0,1 12,2Z" />
+                        </svg>
                         <div class="description">
                             <h5>@kendall</h5>
                             <p>Life Changing App</p>
                         </div>
                     </div>
                     <div class="user">
-                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M11,17L15,9V7H9V9H13L9,17H11M12,2A10,10 0 0,1 22,12A10,10 0 0,1 12,22A10,10 0 0,1 2,12A10,10 0 0,1 12,2Z" /></svg>
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                            <path
+                                d="M11,17L15,9V7H9V9H13L9,17H11M12,2A10,10 0 0,1 22,12A10,10 0 0,1 12,22A10,10 0 0,1 2,12A10,10 0 0,1 12,2Z" />
+                        </svg>
                         <div class="description">
                             <h5>@alex</h5>
                             <p>No Traffic Maker</p>
